--- a/index.html
+++ b/index.html
@@ -1,1 +1,116 @@
-"Hello World"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project Documentation</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+            padding: 20px;
+            background: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #333;
+        }
+        h1 {
+            border-bottom: 2px solid #333;
+            padding-bottom: 10px;
+        }
+        h2 {
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 5px;
+        }
+        .section {
+            margin-bottom: 40px;
+        }
+    </style>
+</head>
+<body>
+<div class="container">
+    <h1>Project Documentation</h1>
+
+    <div class="section">
+        <h2>Problem 1</h2>
+        <h3>Problem description</h3>
+        <p><!-- Problem 1 description goes here --></p>
+
+        <h3>Our interpretation</h3>
+        <p><!-- Our interpretation of problem 1 goes here --></p>
+
+        <h3>Files</h3>
+        <p><!-- List of files related to problem 1 --></p>
+
+        <h3>Input data</h3>
+        <p><!-- Input data for problem 1 --></p>
+
+        <h3>Output data</h3>
+        <p><!-- Output data for problem 1 --></p>
+
+        <h3>Tests</h3>
+        <p><!-- Tests for problem 1 --></p>
+
+        <h3>Complexity and proof</h3>
+        <p><!-- Complexity and proof for problem 1 --></p>
+    </div>
+
+    <div class="section">
+        <h2>Problem 2</h2>
+        <h3>Problem description</h3>
+        <p><!-- Problem 2 description goes here --></p>
+
+        <h3>Our interpretation</h3>
+        <p><!-- Our interpretation of problem 2 goes here --></p>
+
+        <h3>Files</h3>
+        <p><!-- List of files related to problem 2 --></p>
+
+        <h3>Input data</h3>
+        <p><!-- Input data for problem 2 --></p>
+
+        <h3>Output data</h3>
+        <p><!-- Output data for problem 2 --></p>
+
+        <h3>Tests</h3>
+        <p><!-- Tests for problem 2 --></p>
+
+        <h3>Complexity and proof</h3>
+        <p><!-- Complexity and proof for problem 2 --></p>
+    </div>
+
+    <div class="section">
+        <h2>Problem 3</h2>
+        <h3>Problem description</h3>
+        <p><!-- Problem 3 description goes here --></p>
+
+        <h3>Our interpretation</h3>
+        <p><!-- Our interpretation of problem 3 goes here --></p>
+
+        <h3>Files</h3>
+        <p><!-- List of files related to problem 3 --></p>
+
+        <h3>Input data</h3>
+        <p><!-- Input data for problem 3 --></p>
+
+        <h3>Output data</h3>
+        <p><!-- Output data for problem 3 --></p>
+
+        <h3>Tests</h3>
+        <p><!-- Tests for problem 3 --></p>
+
+        <h3>Complexity and proof</h3>
+        <p><!-- Complexity and proof for problem 3 --></p>
+    </div>
+</div>
+</body>
+</html>
