Slight paragraph change

--- a/index.html
+++ b/index.html
@@ -178,14 +178,29 @@
 </head>
 <body>
 <div class="container">
-    <h1>Płaszczaki Project Documentation</h1>
+    <h1>Płaszczaki - Dokumentacja Projektu</h1>
     <input type="text" class="search-bar" id="searchBar" placeholder="Search...">
 
     <div class="accordion">
         <h2>Problem 1</h2>
         <div class="panel">
             <h3>Opis problemu</h3>
-            <p>Paniczny chaos zapanował. Zdecydowano, że jacyś intruzi spoza Kraju musieli zamienić literę b w słowie "boli" na p. Aby chronić piękną historię-melodię napisaną na Stronie, zdecydowano się zbudować wokół niej płot. Aby chronić piękną historię-melodię napisaną na Stronie, zdecydowano się zbudować wokół Kraju płot, używając punktów orientacyjnych. Płot zostanie zbudowany z odcinków o długości 1 (mogą być cięte). Odcinki będą przenoszone przez tragarzy. Wśród tragarzy są dwa rodzaje: ci z rękami z tyłu i ci z rękami z przodu. W dwuwymiarowym świecie nie można przenieść rąk (z przodu na tył i odwrotnie). Aby przenieść odcinek, potrzebny jest tragarz z rękami z tyłu i drugi z rękami z przodu. Nie wszyscy tragarze lubią się nawzajem i nie zawsze chcą ze sobą współpracować. Konieczne jest staranne dobieranie tragarzy w pary. Rysunek 2: Po lewej przyjaźni tragarze przenoszący odcinek prawidłowo, po prawej kłótliwi tragarze, którzy nie chcą współpracować Rysunek 3: Przyjaźni tragarze, którzy nie mogą przenieść odcinka, ponieważ ich ręce są po tej samej stronie Odcinki są produkowane w fabryce, a następnie przenoszone siecią wąskich dróg do punktów zbiorczych. Problem. Określić, jak odcinki są transportowane z fabryki na miejsce budowy płotu. Zbudować płot tak szybko i tanio, jak to możliwe.</p>
+            <p>Zapanował popłoch. Uznano, że jacyś intruzi spoza Krainy musieli zamienić w słowie „boli” literę b
+                na p. Aby chronić piękną opowieść-melodię zapisaną na Stronie, postanowiono zbudować płot naokoło
+                Krainy, wykorzystując punkty orientacyjne. Płot zbuduje się z odcinków długości 1 (można je ciąć).
+                Odcinki będą nosić tragarze. Wśród płaszczaków żyją dwa rodzaje tragarzy: ci z rękoma z tyłu i ci z
+                rękoma z przodu. W świecie dwuwymiarowym niemożliwe jest przełożenie rąk (z przodu do tyłu oraz
+                1
+                odwrotnie). Do przeniesienia odcinka potrzebny jest tragarz z rękoma z tyłu oraz drugi z rękoma z
+                przodu.
+                Nie wszyscy tragarze się lubią i nie zawsze chcą ze sobą współpracować. Trzeba delikatnie dobierać
+                tragarzy w pary.
+                Rysunek 2: Po lewej zaprzyjaźnieni tragarze poprawnie niosący odcinek, po prawej zwaśnieni tragarze,
+                którzy nie chcą współpracować
+                Rysunek 3: Zaprzyjaźnieni tragarze, którzy nie mogą nieść odcinka, gdyż mają ręce z tej samej strony
+                Odcinki są produkowane w fabryce i następnie siecią wąskich dróg przenoszone do punktów odbioru.
+                Problem. Ustalić, w jaki sposób są transportowane odcinki z fabryki do miejsca budowy płotu.
+                Możliwie szybko i możliwie małym kosztem zbudować płot.</p>
 
             <h3>Nasza interpretacja</h3>
             <p>Ten problem można podzielić na dwa podproblemy. Pierwszy problem to, mając dany zestaw pracowników oraz określone warunki i relacje, celem jest obliczenie maksymalnej liczby możliwych par. Drugi problem to generowanie granicy wokół zbioru punktów i konstruowanie sieci przepływu między nimi, na podstawie określonych kryteriów krawędzi. Obliczenie potrzebne, to ilość dni potrzebnych do zbudowania muru wokół granicy, jeśli pary pracowników mogłyby składać elementy muru wokół każdego punktu granicznego.</p>
