--- a/index.html
+++ b/index.html
@@ -351,15 +351,19 @@
 
     <div class="footer">
         <p id="datetime"></p>
-        <p><a href="https://github.com/lelMike/plaszczaki/tree/master?tab=readme-ov-file" target="_blank">Back to GitHub Repository</a></p>
+        <p><a href="https://github.com/lelMike/plaszczaki/tree/master?tab=readme-ov-file" target="_blank">Cofnij się do repozytorium projektu</a></p>
     </div>
 </div>
 <button class="back-to-top" onclick="scrollToTop()">Back to Top</button>
-<button class="dark-mode-toggle" onclick="toggleDarkMode()">Toggle Dark/Light Mode</button>
-<button class="translate-toggle" id="translateButton" onclick="toggleTranslation()">Translate</button>
+<button class="dark-mode-toggle" onclick="toggleDarkMode()">Tryb Jasny/ Ciemny</button>
+<button class="translate-toggle" id="translateButton" onclick="toggleTranslation()">Tłumacz EN/POL</button>
 
 <script>
     const translations = {
+        "Tłumacz EN/POL": "Translate EN/POL",
+        "Tryb Jasny/ Ciemny": "Light/Dark Mode",
+        "Cofnij się do repozytorium projektu": "Go back to the project repository",
+        "Data i czas: ": "Date and time: ",
         "Płaszczaki - Dokumentacja Projektu": "Płaszczaki - Project Documentation",
         "Opis problemu": "Problem Description",
         "Nasza interpretacja": "Our Interpretation",
@@ -440,7 +444,7 @@
     let translated = false;
 
     function toggleTranslation() {
-        const elements = document.querySelectorAll('h1, h2, h3, p');
+        const elements = document.querySelectorAll('h1, h2, h3, p, button, a');
 
         elements.forEach(element => {
             if (translated) {
@@ -486,7 +490,7 @@
         const datetimeElement = document.getElementById('datetime');
         const now = new Date();
         const formattedDateTime = now.toLocaleString();
-        datetimeElement.textContent = `Date and Time: ${formattedDateTime}`;
+        datetimeElement.textContent = `Data i czas: ${formattedDateTime}`;
     });
 
     function toggleDarkMode() {
