Forgot about translation for 1 button

--- a/index.html
+++ b/index.html
@@ -354,13 +354,14 @@
         <p><a href="https://github.com/lelMike/plaszczaki/tree/master?tab=readme-ov-file" target="_blank">Cofnij się do repozytorium projektu</a></p>
     </div>
 </div>
-<button class="back-to-top" onclick="scrollToTop()">Back to Top</button>
+<button class="back-to-top" onclick="scrollToTop()">Do Góry</button>
 <button class="dark-mode-toggle" onclick="toggleDarkMode()">Tryb Jasny/ Ciemny</button>
 <button class="translate-toggle" id="translateButton" onclick="toggleTranslation()">Tłumacz EN/POL</button>
 
 <script>
     const translations = {
         "Tłumacz EN/POL": "Translate EN/POL",
+        "Do Góry": "Back to Top",
         "Tryb Jasny/ Ciemny": "Light/Dark Mode",
         "Cofnij się do repozytorium projektu": "Go back to the project repository",
         "Data i czas: ": "Date and time: ",
