--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
     <div class="presentation-link">
         <h2>Prezentacja Projektu</h2>
-        <a href="https://www.canva.com/design/DAGH1hVRGKo/JlKNhOwhFo0aoPoignHByg/edit?fbclid=IwAR1qpgcgULpi-c9Dcov4lnLFUM3Ipou2Cxqi7pEKtlmSkx7VRF8h5TqCVAM" target="_blank">Zobacz Prezentacje</a>
+        <a href="extern/Prezentacja.pdf" target="_blank">Zobacz Prezentacje</a>
     </div>
 
     <div class="footer">
