oby to byl ostatni commit

--- a/index.html
+++ b/index.html
@@ -423,7 +423,8 @@
 
     <div class="presentation-link">
         <h2>Prezentacja Projektu</h2>
-        <a href="extern/Prezentacja.pdf" target="_blank">Zobacz Prezentacje</a>
+        <a href="extern/Prezentacja.pdf" target="_blank">Zobacz Prezentacje (pdf)</a>
+        <a href="extern/Prezentacja.pptx" target="_blank">Zobacz Prezentacje (pptx)</a>
     </div>
 
     <div class="footer">
