:( to jednak nie ostatni commit

--- a/index.html
+++ b/index.html
@@ -398,7 +398,9 @@
             <p>W outpucie mamy numer testu, poszczególne energie każdego strażnika, a następnie grafik oraz liczba przesłuchań melodii</p>
 
             <h3>Testy</h3>
-            <p>Testy przeprowadzałam na wielu przypadkach w tym mowa o tych skrajnych: np: ⦁ wszyscy strażnicy mają urlop 1-ego dnia ⦁ jeden strażnik ma urlop każdego dnia ⦁ każde kolejne punkty są od siebie większe ⦁ uwzględnione 14 dni zamiast 7</p>
+           <p>Testy przeprowadzałam na wielu przypadkach w tym mowa o tych skrajnych: np: ⦁ wszyscy strażnicy mają urlop 1-ego dnia ⦁ jeden strażnik ma urlop każdego dnia ⦁ każde kolejne punkty są od siebie większe ⦁ uwzględnione 14 dni zamiast 7</p>
+            <h3>Złożoność i dowód</h3>
+            <p> Złożoność pliku route.cpp to mniej więcej O(n^3), a pliku guards.cpp ~ O(n)</p>
         </div>
     </div>
 
