commit nr milion

--- a/index.html
+++ b/index.html
@@ -400,7 +400,14 @@
             <h3>Testy</h3>
            <p>Testy przeprowadzałam na wielu przypadkach w tym mowa o tych skrajnych: np: ⦁ wszyscy strażnicy mają urlop 1-ego dnia ⦁ jeden strażnik ma urlop każdego dnia ⦁ każde kolejne punkty są od siebie większe ⦁ uwzględnione 14 dni zamiast 7</p>
             <h3>Złożoność i dowód</h3>
-            <p> Złożoność pliku route.cpp to mniej więcej O(n^3), a pliku guards.cpp ~ O(n)</p>
+            <p> Route.cpp: Złożoność czasowa: O(n3)
+                Złożoność pamięciowa: O(n)
+                Guards.cpp: Złożoność czasowa: O(g log g)
+                Złożoność pamięciowa: O(g)
+                problem3.cpp: Złożoność czasowa: O(days * (g log g + n * brightness.size()))
+                Złożoność pamięciowa: O(g + n)
+            
+            </p>
         </div>
     </div>
 
