minimal formatting change in index.html

--- a/index.html
+++ b/index.html
@@ -400,12 +400,12 @@
             <h3>Testy</h3>
            <p>Testy przeprowadzałam na wielu przypadkach w tym mowa o tych skrajnych: np: ⦁ wszyscy strażnicy mają urlop 1-ego dnia ⦁ jeden strażnik ma urlop każdego dnia ⦁ każde kolejne punkty są od siebie większe ⦁ uwzględnione 14 dni zamiast 7</p>
             <h3>Złożoność i dowód</h3>
-            <p> Route.cpp: Złożoność czasowa: O(n3)
-                Złożoność pamięciowa: O(n)
-                Guards.cpp: Złożoność czasowa: O(g log g)
-                Złożoność pamięciowa: O(g)
-                problem3.cpp: Złożoność czasowa: O(days * (g log g + n * brightness.size()))
-                Złożoność pamięciowa: O(g + n)
+            <p>Route.cpp: Złożoność czasowa: O(n3)</p>
+                <p>Złożoność pamięciowa: O(n)</p>
+                <p>Guards.cpp: Złożoność czasowa: O(g log g)</p>
+                <p>Złożoność pamięciowa: O(g)</p>
+                <p>problem3.cpp: Złożoność czasowa: O(days * (g log g + n * brightness.size()))</p>
+                <p>Złożoność pamięciowa: O(g + n)</p>
             
             </p>
         </div>
@@ -447,6 +447,15 @@
 
 <script>
     const translations = {
+        "Search...": "Szukaj...",
+        "Złożoność i dowód": "Complexity and Proof",
+        "Zobacz Prezentacje": "See Presentations",
+        "Route.cpp: Złożoność czasowa: O(n3)": "Route.cpp: Time Complexity: O(n3)",
+        "Złożoność pamięciowa: O(n)": "Memory Complexity: O(n)",
+        "Guards.cpp: Złożoność czasowa: O(g log g)": "Guards.cpp: Time Complexity: O(g log g)",
+        "Złożoność pamięciowa: O(g)": "Memory Complexity: O(g)",
+        "problem3.cpp: Złożoność czasowa: O(days * (g log g + n * brightness.size()))": "problem3.cpp: Time Complexity: O(days * (g log g + n * brightness.size()))",
+        "Złożoność pamięciowa: O(g + n)": "Memory Complexity: O(g + n)",
         "Prezentacja Projektu": "Project Presentation",
         "Zobacz Prezentacje": "See Presentations",
         "O zespole": "About the Team",
